[package]
name = "token-server"
version = "0.1.0"
authors = ["ty <ty@notarealemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors  = "0.5"
actix-web = { version = "3", features = ["openssl"] }
openssl = "0.10"
